[metadata]
name = imgflip
description = api to imgflip
url = https://github.com/axju/imgflip
author = axju
author_email = axel.juraske@short-report.de
license = MIT
long_description = file: README.rst
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[tox:tox]
envlist = py36, py37, py38, flake8, pylint
skipt_missing_interpreters = True

[testenv]
deps =
  coverage
  pytest
commands = coverage run --source imgflip -m pytest
           coverage report --fail-under=50

[testenv:flake8]
deps = flake8
commands = flake8 imgflip

[testenv:pylint]
deps = pylint
commands = pylint --rcfile=setup.cfg imgflip

[flake8]
max-line-length = 160

[pylint]
disable = missing-module-docstring, missing-function-docstring, invalid-name, too-many-arguments
max-line-length = 160
